<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:background="#EEE" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="22dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/coinQty"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_weight="0.40"
                android:background="@drawable/textlines"
                android:ems="5"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:hint="@string/coinQtyHint"
                android:inputType="number"
                android:maxLength="5"
                android:singleLine="true"
                android:text="@string/coinQtyText" >
            </EditText>

            <TextView
                android:id="@+id/coinName"
                android:layout_width="65dp"
                android:layout_height="match_parent"
                android:layout_weight="0.55"
                android:background="@drawable/textlines"
                android:ems="5"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:hint="@string/coinNameHint"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/linearLayout2"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/worthInCurrency"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.00"
                android:background="@drawable/textlines"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:hint="@string/quantityHint"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/currencySpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/linearLayout1"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/equalsSign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/equalSign"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="40sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="42dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/linearLayout3"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:contentDescription="@string/imageDesc"
            android:scaleType="centerCrop"
            android:src="@drawable/line" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:fadeScrollbars="false"
        android:scrollbars="vertical" >

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#EEE" >

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_horizontal" >

                <TextView
                    android:id="@+id/imageRow"
                    android:layout_weight="1"
                    android:background="#33B5E5"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:padding="17dip"
                    android:text="@string/image"
                    android:textColor="#000000" />

                <ImageView
                    android:id="@+id/image"
                    android:layout_weight="1"
                    android:background="#FFBB33"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:padding="2.3dip"
                    android:contentDescription="@string/imageDesc"
                    android:src="@drawable/alphacoin"
                    android:textColor="#000000" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_horizontal" >

                <TextView
                    android:id="@+id/abbrevRow"
                    android:layout_weight="1"
                    android:background="#33B5E5"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:padding="12dip"
                    android:text="@string/symbol"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/abbrevInfo"
                    android:layout_weight="1"
                    android:background="#FFBB33"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:padding="12dip"
                    android:textColor="#000000" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_horizontal" >

                <TextView
                    android:id="@+id/algorithmRow"
                    android:layout_weight="1"
                    android:background="#33B5E5"
                    android:gravity="center"
                    android:padding="12dip"
                    android:text="@string/algorithm"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/algorithmInfo"
                    android:layout_weight="1"
                    android:background="#FFBB33"
                    android:gravity="center"
                    android:padding="12dip"
                    android:textColor="#000000" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_horizontal" >

                <TextView
                    android:id="@+id/difficultyRow"
                    android:layout_weight="1"
                    android:background="#33B5E5"
                    android:gravity="center"
                    android:padding="12dip"
                    android:text="@string/difficulty"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/difficultyInfo"
                    android:layout_weight="1"
                    android:background="#FFBB33"
                    android:gravity="center"
                    android:padding="12dip"
                    android:textColor="#000000" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_horizontal" >

                <TextView
                    android:id="@+id/rewardRow"
                    android:layout_weight="1"
                    android:background="#33B5E5"
                    android:gravity="center"
                    android:padding="12dip"
                    android:text="@string/reward"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/rewardInfo"
                    android:layout_weight="1"
                    android:background="#FFBB33"
                    android:gravity="center"
                    android:padding="12dip"
                    android:textColor="#000000" />
            </TableRow>
            
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_horizontal" >

                <TextView
                    android:id="@+id/minBlockTimeRow"
                    android:layout_weight="1"
                    android:background="#33B5E5"
                    android:gravity="center"
                    android:padding="12dip"
                    android:text="@string/minBlockTime"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/minBlockTimeInfo"
                    android:layout_weight="1"
                    android:background="#FFBB33"
                    android:gravity="center"
                    android:padding="12dip"
                    android:textColor="#000000" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_horizontal" >

                <TextView
                    android:id="@+id/networkhashrateRow"
                    android:layout_weight="1"
                    android:background="#33B5E5"
                    android:gravity="center"
                    android:padding="12dip"
                    android:text="@string/networkhashRate"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/networkhashrateInfo"
                    android:layout_weight="1"
                    android:background="#FFBB33"
                    android:gravity="center"
                    android:padding="12dip"
                    android:textColor="#000000" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_horizontal" >

                <TextView
                    android:id="@+id/avgHashRow"
                    android:layout_weight="1"
                    android:background="#33B5E5"
                    android:gravity="center"
                    android:padding="12dip"
                    android:text="@string/avgHash"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/avgHashInfo"
                    android:layout_weight="1"
                    android:background="#FFBB33"
                    android:gravity="center"
                    android:padding="12dip"
                    android:textColor="#000000" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_horizontal" >

                <TextView
                    android:id="@+id/exchangeRow"
                    android:layout_weight="1"
                    android:background="#33B5E5"
                    android:gravity="center"
                    android:padding="12dip"
                    android:text="@string/exchange"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/exchangeInfo"
                    android:layout_weight="1"
                    android:background="#FFBB33"
                    android:gravity="center"
                    android:padding="12dip"
                    android:textColor="#000000" />
            </TableRow>
        </TableLayout>
    </ScrollView>

</LinearLayout>